--- a/main.tex
+++ b/main.tex
@@ -1107,17 +1107,17 @@ leveraged by LLM for ontology population, we compute the compute the
 Levenshtein distance \cite{levenshtein1966BinaryCodesCapable} between the
 labels of individuals and the two groups outlined previously in Section
 \ref{subsec:experiment-ontology-factors}. We report these scores in Table
-\ref{tab:entity-label-separation} (G1 and G2). Group 1(G1) disparity exhibits the
-lexical similarity between an individual label and its directly-asserted
+\ref{tab:entity-label-separation} (G1 and G2). Group 1(G1) disparity exhibits
+the lexical similarity between an individual label and its directly-asserted
 concepts while Group 2(G2) disparity is the average lexical similarity between
 an individual labels and all concept ancestors of the directly-asserted
-concept. is highest for the Wines ontology and lowest for
-the CASE ontology. LLMs cannot resort to lexical matching to find the
-directly-asserted concept for the Wines ontology but might be able to do so
-for the CASE ontology.   Thus, a great deal of lexical matching can be utilized to
-identify the directly-asserted concept across the ontologies.  Group 2
-disparity clearly highlights that lexical matching is insufficient for LLMs to
-infer concept hierarchies.
+concept. G1 is highest for the Wines ontology and lowest for the CASE
+ontology. LLMs cannot resort to lexical matching to find the directly-asserted
+concept for the Wines ontology but might be able to do so for the CASE
+ontology.  Thus, a great deal of lexical matching can be utilized to identify
+the directly-asserted concept across the ontologies.  Group 2 disparity
+clearly highlights that lexical matching is insufficient for LLMs to infer
+concept hierarchies.
 The combination of the two disparities highlight that LLMs might be able to infer the directly-asserted concepts from lexical matching but cannot infer hierarchies. This plays a crucial role in our decision to formulate the ontology population task as a retrieval task focusing on hierarchies and not just the directly-asserted concept. \\
 %
 The semantic separation and lexical disparty between the two entity types
