--- a/main.tex
+++ b/main.tex
@@ -1118,9 +1118,9 @@ ontology. Thus, a great deal of lexical matching can be utilized to identify
 the directly-asserted concept across the ontologies. Group 2 disparity
 clearly highlights that lexical matching is insufficient for LLMs to infer
 concept hierarchies.
-The combination of the two disparities highlight that LLMs might be able to infer the directly-asserted concepts from lexical matching but cannot infer hierarchies. This plays a crucial role in our decision to formulate the ontology population task as a retrieval task focusing on hierarchies and not just the directly-asserted concept. \\
-%
-The semantic separation and lexical disparty between the two entity types
+Combining insights from the two disparities and the fact that several
+individual labels utilize names of the directly-asserted concepts in their
+label suggests that LLMs might be able to infer the directly-asserted concepts from lexical matching but cannot infer hierarchies.The semantic separation and lexical disparty between the two entity types
 indicate that the CASE ontology may pose a harder challenge for LLMs. Semantic
 similarity between the entity types for the other two ontologies suggests they
 might be easier for LLMs to perform ontology population, even without lexical
