--- a/main.tex
+++ b/main.tex
@@ -37,6 +37,7 @@
 \newcommand*{\hlgreen}[1]{{\sethlcolor{YellowGreen}\hl{#1}}}
 \newcommand*{\hlorange}[1]{{\sethlcolor{Apricot}\hl{#1}}}
 
+\usepackage{dirtree}
 \usepackage{listings} % For better verbatim and code highlighting
 \lstset{
   basicstyle=\ttfamily,
