--- a/main.tex
+++ b/main.tex
@@ -40,7 +40,7 @@
 \usepackage{dirtree}
 \usepackage{listings} % For better verbatim and code highlighting
 \lstset{
-  basicstyle=\ttfamily,
+  basicstyle=\ttfamily\tiny,
   escapeinside=||,
   breaklines=true,
   breakautoindent=false,
