--- a/main.tex
+++ b/main.tex
@@ -1126,13 +1126,15 @@ from lexical matching but cannot infer hierarchies.
 \begin{figure}
     \centering
     \begin{subfigure}[t]{0.3\textwidth}
-    \begin{minipage}{8cm}
+      \begin{minipage}{8cm}
+    \begin{tiny}
     \dirtree{%
     .1 UcoThing.
         .2 UcoInherentCharacterizationThing.
             .3 Facet.
                 .4 \textbf{AccountFacet}.
-    }
+              }
+              \end{tiny}
     \end{minipage}
     \caption{Ground Truth Hierarchy for `AccountFacet'}
     \end{subfigure}
