--- a/main.tex
+++ b/main.tex
@@ -1126,7 +1126,7 @@ from lexical matching but cannot infer hierarchies.
 \begin{figure}
     \centering
     \begin{subfigure}[t]{0.3\textwidth}
-      \begin{minipage}{8cm}
+      \begin{minipage}{0.3\textwidth}
     \mydirtree{%
     .1 UcoThing.
         .2 UcoInherentCharacterizationThing.
@@ -1136,7 +1136,7 @@ from lexical matching but cannot infer hierarchies.
     \end{minipage}
     \caption{Ground Truth Hierarchy for `AccountFacet'}
     \end{subfigure}
-    \begin{subfigure}[t]{0.5\textwidth}
+    \begin{subfigure}[t]{0.3\textwidth}
     \begin{minipage}{8cm}
     \dirtree{%
     .1 \hlorange{DeviceFacet}.
