--- a/main.tex
+++ b/main.tex
@@ -1138,7 +1138,7 @@ from lexical matching but cannot infer hierarchies.
     \end{subfigure}
     \begin{subfigure}[t]{0.3\textwidth}
     \begin{minipage}{0.3\textwidth}
-    \dirtree{%
+    \mydirtree{%
     .1 \hlorange{DeviceFacet}.
         .2 \hlorange{MobileAccountFacet}.
             .3 ApplicationAccountFacet.
