--- a/main.tex
+++ b/main.tex
@@ -1137,7 +1137,7 @@ from lexical matching but cannot infer hierarchies.
     \caption{Ground Truth Hierarchy for `AccountFacet'}
     \end{subfigure}
     \begin{subfigure}[t]{0.3\textwidth}
-    \begin{minipage}{0.3\textwidth}
+    \begin{minipage}{\textwidth}
     \mydirtree{%
     .1 \hlorange{DeviceFacet}.
         .2 \hlorange{MobileAccountFacet}.
