--- a/main.tex
+++ b/main.tex
@@ -1125,8 +1125,8 @@ label suggests that LLMs might be able to infer the directly-asserted concepts
 from lexical matching but cannot infer hierarchies.
 \begin{figure}
     \centering
-    \begin{subfigure}[t]{0.3\textwidth}
-      \begin{minipage}{0.3\textwidth}
+    \begin{subfigure}[t]{0.4\textwidth}
+      \begin{minipage}{\textwidth}
     \mydirtree{%
     .1 UcoThing.
         .2 UcoInherentCharacterizationThing.
