--- a/main.tex
+++ b/main.tex
@@ -1125,7 +1125,7 @@ label suggests that LLMs might be able to infer the directly-asserted concepts
 from lexical matching but cannot infer hierarchies.
 \begin{figure}
     \centering
-    \begin{subfigure}[t]{0.4\textwidth}
+    \begin{subfigure}[b]{0.4\textwidth}
       \begin{minipage}{\textwidth}
     \mydirtree{%
     .1 UcoThing.
@@ -1136,7 +1136,7 @@ from lexical matching but cannot infer hierarchies.
     \end{minipage}
     \caption{Ground Truth Hierarchy for `AccountFacet'}
     \end{subfigure}
-    \begin{subfigure}[t]{0.4\textwidth}
+    \begin{subfigure}[b]{0.4\textwidth}
     \begin{minipage}{\textwidth}
     \mydirtree{%
     .1 \hlorange{DeviceFacet}.
