--- a/main.tex
+++ b/main.tex
@@ -1138,7 +1138,7 @@ from lexical matching but cannot infer hierarchies.
     \end{subfigure}
     \begin{subfigure}[b]{0.4\textwidth}
     \begin{minipage}{\textwidth}
-    \dirtree{%
+    \mydirtree{%
     .1 \hlorange{MobileDeviceFacet}.
         .2 \hlorange{AccountAuthenticationFacet}.
             .3 \hlorange{SIMCardFacet}.
