--- a/main.tex
+++ b/main.tex
@@ -1134,7 +1134,7 @@ from lexical matching but cannot infer hierarchies.
                 .4 \textbf{AccountFacet}.
     }
     \end{minipage}
-    \caption{Ground Truth Hierarchy for `AccountFacet'}
+    % \caption{Ground Truth Hierarchy for `AccountFacet'}
     \end{subfigure}
     \begin{subfigure}[b]{0.4\textwidth}
     \begin{minipage}{\textwidth}
@@ -1149,7 +1149,7 @@ from lexical matching but cannot infer hierarchies.
                             .8 \textbf{AccountFacet}.
     }
     \end{minipage}
-    \caption{GPT-4o, zero-shot, generic contextualization prediction hierarchy for `AccountFacet' taken from individual correctly identified as instance of `AccountFacet'. Concepts in \hlorange{orange} are siblings of `AccountFacet'}
+    % \caption{GPT-4o, zero-shot, generic contextualization prediction hierarchy for `AccountFacet' taken from individual correctly identified as instance of `AccountFacet'. Concepts in \hlorange{orange} are siblings of `AccountFacet'}
     \end{subfigure}
     \begin{subfigure}[t]{0.5\textwidth}
     \begin{minipage}{8cm}
