--- a/main.tex
+++ b/main.tex
@@ -1133,7 +1133,8 @@ from lexical matching but cannot infer hierarchies.
             .3 Facet.
                 .4 \textbf{AccountFacet}.
     }
-    \end{minipage}
+  \end{minipage}
+  \caption{}
     % \caption{Ground Truth Hierarchy for `AccountFacet'}
     \end{subfigure}
     \begin{subfigure}[b]{0.4\textwidth}
