--- a/main.tex
+++ b/main.tex
@@ -1149,7 +1149,8 @@ from lexical matching but cannot infer hierarchies.
                         .7 \hlorange{DigitalAccountFacet}.
                             .8 \textbf{AccountFacet}.
     }
-    \end{minipage}
+  \end{minipage}
+  \caption{}
     % \caption{GPT-4o, zero-shot, generic contextualization prediction hierarchy for `AccountFacet' taken from individual correctly identified as instance of `AccountFacet'. Concepts in \hlorange{orange} are siblings of `AccountFacet'}
     \end{subfigure}
     \begin{subfigure}[t]{0.5\textwidth}
