--- a/main.tex
+++ b/main.tex
@@ -1114,7 +1114,7 @@ Wines ontology and lowest for the CASE ontology. LLMs cannot resort to lexical
 matching to find the directly-asserted concept for the Wines ontology but
 might be able to do so for the CASE ontology. Thus, a great deal of lexical
 matching can be utilized to identify the directly-asserted concept across the
-ontologies. Group 2 disparity clearly highlights that lexical matching is
+ontologies. Much larger G2 disparity clearly highlights that lexical matching is
 insufficient for LLMs to infer concept hierarchies. Combining insights from
 the two disparities and the fact that several individual labels utilize names
 of the directly-asserted concepts in their label suggests that LLMs might be
