--- a/main.tex
+++ b/main.tex
@@ -1112,14 +1112,13 @@ labels of individuals and the two groups outlined previously in Section
 \ref{tab:entity-label-separation} (G1 and G2). G1 disparity is highest for the
 Wines ontology and lowest for the CASE ontology. LLMs cannot resort to lexical
 matching to find the directly-asserted concept for the Wines ontology but
-might be able to do so for the CASE ontology. Thus, a great deal of lexical
-matching can be utilized to identify the directly-asserted concept across the
-ontologies. However, much larger G2 disparity clearly highlights that lexical matching
-is insufficient for LLMs to infer concept hierarchies. Combining insights from
-the two disparities and the fact that several individual labels utilize names
-of the directly-asserted concepts in their label suggests that LLMs might be
-able to infer the directly-asserted concepts from lexical matching but cannot
-infer hierarchies.
+might be able to do so for the CASE and Astronomy ontologies.However, much
+larger G2 disparity clearly highlights that lexical matching is insufficient
+for LLMs to infer concept hierarchies. Combining insights from the two
+disparities and the fact that several individual labels utilize names of the
+directly-asserted concepts in their label suggests that LLMs might be able to
+infer the directly-asserted concepts from lexical matching but cannot infer
+hierarchies.
 \begin{figure}
     \centering
     \begin{subfigure}[b]{0.45\textwidth}
