--- a/main.tex
+++ b/main.tex
@@ -1113,7 +1113,7 @@ labels of individuals and the two groups outlined previously in Section
 Wines ontology and lowest for the CASE ontology. LLMs cannot resort to lexical
 matching to find the directly-asserted concept for the Wines ontology but
 might be able to do so for the CASE and Astronomy ontologies.However, much
-larger G2 disparity clearly highlights that lexical matching is insufficient
+larger G2 disparity across all ontologies clearly highlights that lexical matching is insufficient
 for LLMs to infer concept hierarchies. Combining insights from the two
 disparities and the fact that several individual labels utilize names of the
 directly-asserted concepts in their label suggests that LLMs might be able to
