--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@
   breakindent=0pt,
   numbers=none
 }
-\newcommand\mydirtree[1]{{\tiny\dirtree{#1}\par}}
+\newcommand\mydirtree[1]{{\small\dirtree{#1}\par}}
 \begin{document}
 %
 \title{Ontology Population Using LLMs: Which Factors Matter?}
