--- a/main.tex
+++ b/main.tex
@@ -1150,7 +1150,10 @@ matching but cannot infer hierarchies.
   \caption{}
     % \caption{GPT-4o, zero-shot, generic contextualization prediction hierarchy for `AccountFacet' taken from individual correctly identified as instance of `AccountFacet'. Concepts in \hlorange{orange} are siblings of `AccountFacet'}
     \end{subfigure}
-    \caption{Predicted Hierarchies}
+    \caption{a) Ground truth hierarchy of the `AccountFacet' concept from the
+      CASE Ontology b) GPT-4o zero-shot predicted hierarchy for an individual
+      of `AccountFacet'. Concepts highlighted in orange are incorrect
+      hierarchy predictions. }
     \label{fig:lexical-prediction-hierarchy}
   \end{figure}
   
