--- a/main.tex
+++ b/main.tex
@@ -1118,7 +1118,13 @@ matching is insufficient for LLMs to infer concept hierarchies. Combining
 insights from the two disparities and the fact that several individual labels
 utilize names of the directly-asserted concepts in their label suggests that
 LLMs might be able to infer the directly-asserted concepts from lexical
-matching but cannot infer hierarchies.
+matching but cannot infer hierarchies. Looking at Table \ref{tab:results}, we
+observe that under, zero-shot conditions, LLMs are able to predict the
+directly-asserted concepts for all ontologies ($\text{mAP@1}$) but struggle
+with predicting complete hierarchies ($\text{mAP@D}$), particularly on the
+CASE ontology. Manually inspecting the nature of predicted hierarchies in the
+zero-shot setting, we do observe a large tendency to predict hierarchies based
+on string similarity. Figure \ref{fig:lexical-prediction-hierarchy}
 
 \begin{figure}
     \centering
