--- a/main.tex
+++ b/main.tex
@@ -1124,7 +1124,9 @@ directly-asserted concepts for all ontologies ($\text{mAP@1}$) but struggle
 with predicting complete hierarchies ($\text{mAP@D}$), particularly on the
 CASE ontology. Manually inspecting the nature of predicted hierarchies in the
 zero-shot setting, we do observe a large tendency to predict hierarchies based
-on string similarity. Figure \ref{fig:lexical-prediction-hierarchy}
+on string similarity. Figure \ref{fig:lexical-prediction-hierarchy} showcases
+the preference for string similarity when predicting hierarchies for an
+individual of the CASE ontology.
 
 \begin{figure}
     \centering
