--- a/main.tex
+++ b/main.tex
@@ -1127,7 +1127,9 @@ ontologies ($\text{mAP@1}$) but struggle with predicting complete hierarchies
 nature of predicted hierarchies in the zero-shot setting, we do observe a
 large tendency to predict hierarchies based on string similarity. Figure
 \ref{fig:lexical-prediction-hierarchy} showcases the preference for string
-similarity when predicting hierarchies for an individual of the CASE ontology.
+similarity when predicting hierarchies for an individual of the CASE
+ontology. The influence of string similarity is reduced in the few-shot
+experiments. 
 
 \begin{figure}
     \centering
