--- a/main.tex
+++ b/main.tex
@@ -1084,7 +1084,7 @@ much lower than the other two ontologies. These two entity label metrics
 (Table \ref{tab:entity-label-separation}) together suggest that the entity
 labels of the CASE Ontology might make ontology population difficult for
 LLMs. The performance in Table \ref{tab:results} supports our hypothesis with
-performanve on the the CASE Ontology being significantly lower than the other
+performance on the the CASE Ontology being significantly lower than the other
 two ontologies in the zero-shot scenario and when using one or two examples
 for few-shot prompting. Beyond that, the provision of more examples in
 few-shot counters the effects of this entity semantic separation. The semantic
