--- a/main.tex
+++ b/main.tex
@@ -1076,8 +1076,8 @@ homegeneity using the Davies-Bouldin Index (DBI)
 
 \begin{table}
   \centering
-  \caption{Entity label semantic and lexical metrics for Wines, CASE and
-    Astronomy ontologies (Levenshtein shortened to L. for readability)}
+  \caption{Entity label metrics for Wines, CASE and Astronomy ontologies
+    (Levenshtein shortened to L. for readability)}
   \label{tab:entity-label-separation}
   \begin{tabular}{|l|r|r|r|}
     \hline
