--- a/main.tex
+++ b/main.tex
@@ -57,20 +57,20 @@
 % If the paper title is too long for the running head, you can set
 % an abbreviated paper title here
 %
-\author{Upal Bhattacharya\inst{1}\orcidID{0000-0002-0877-7063}\and
-        Maaike de Boer\inst{2}\orcidID{0000-0002-2775-8351} \and
-        Sergey Sosnovsky\inst{1}\orcidID{0000-0001-8023-1770}}
+% \author{Upal Bhattacharya\inst{1}\orcidID{0000-0002-0877-7063}\and
+%         Maaike de Boer\inst{2}\orcidID{0000-0002-2775-8351} \and
+%         Sergey Sosnovsky\inst{1}\orcidID{0000-0001-8023-1770}}
 
 \authorrunning{U. Bhattacharya et al.}
 % % First names are abbreviated in the running head.
 % % If there are more than two authors, 'et al.' is used.
 % %
-\institute{
-    Department of Information and Computing Sciences, Utrecht Univerisity, Princetonplein 5, 3584 CC, Utrecht, The Netherlands \\
-    \email{u.bhattacharya@uu.nl, s.a.sosnovsky@uu.nl} \and
-    Department Data Science, TNO, Anna van Buerenplein 1, 2595 DA, Den Haag, The Netherlands \\ 
-    \email{maaike.deboer@tno.nl}
-    }
+% \institute{
+%     Department of Information and Computing Sciences, Utrecht Univerisity, Princetonplein 5, 3584 CC, Utrecht, The Netherlands \\
+%     \email{u.bhattacharya@uu.nl, s.a.sosnovsky@uu.nl} \and
+%     Department Data Science, TNO, Anna van Buerenplein 1, 2595 DA, Den Haag, The Netherlands \\ 
+%     \email{maaike.deboer@tno.nl}
+%     }
 \maketitle              % typeset the header of the contribution
 %
 \begin{abstract}
