--- a/main.tex
+++ b/main.tex
@@ -1245,6 +1245,7 @@ matching for making predictions.
 \subsection{Analysis of LLM Factors}
 \label{subsec:results-llm-variability}
 
+\subsubsection{Choice of LLM:}
 %% open-source vs. closed-source and large vs. small
 We find that larger (closed-source) LLMs outperform their smaller
 (open-source) competitors.
