--- a/main.tex
+++ b/main.tex
@@ -1248,7 +1248,7 @@ matching for making predictions.
 \subsubsection{Choice of LLM:}
 %% open-source vs. closed-source and large vs. small
 We find that larger (commercial) LLMs outperform their smaller
-(open-source) competitors.
+(open) competitors.
 % (Tables \ref{tab:zero-shot-results} and \ref{tab:few-shot-results})
 Without further experimentation with larger open-source models, it is
 difficult to say if other factors beyond the model size are responsible for
