--- a/main.tex
+++ b/main.tex
@@ -1270,7 +1270,7 @@ indicating the potential of reasoning LLMs for ontology-related tasks. Despite
 DeepSeek's R1-Distil-Llama-8B being a reasoning LLM , it has the worst
 performance among all 4 models. Further prompt engineering could improve
 results of the smaller reasoning models, but our experimentation highlights
-that reasoning LLMs do not always outperform conventional LLMs. For larger
+that reasoning LLMs do not always outperform general LLMs. For larger
 models, we observe that GPT-4o, when provided with a few examples (Table
 \ref{tab:results}), performs as well as o1-preview under zero-shot
 conditions. Further experimentation with few-shot prompting reasoning models
