--- a/main.tex
+++ b/main.tex
@@ -1298,6 +1298,7 @@ even lead to degradation in performance in some situations.
     Llama3-8B (b) using ontology domain contextualization}\label{fig:few-shot}
 \end{figure}
 
+\subsubsection{Prompting Approach}
 %% Zero-shot vs. Few-shot
 Including a single example leads to significant performance improvements,
 particularly on the CASE ontology. Significant improvements in $mAP@D$
