--- a/main.tex
+++ b/main.tex
@@ -1306,7 +1306,7 @@ highlight how LLMs can adapt with little context. Improvements in $mAP@1$ are
 less pronounced in comparison.
 % Thus, the primary benefit of adding examples is in identifying the
 % ontological hierarchy relations that a user is looking for.
-Thus, adding examples primarily improves an LLM's ability to infer the correct
+Adding examples primarily improves an LLM's ability to infer the correct
 ontology concept hierarchy.  The performance improvements on the Wines and
 Astronomy ontologies are less pronounced, possibly due to the already
 compatible semantic understanding the LLMs possess of their entities.
