--- a/main.tex
+++ b/main.tex
@@ -1323,6 +1323,7 @@ entity label semantics differs from the ontological entity properties. Largest
 performance benefits are observed when using 3 or 4 examples beyond which
 smaller LLMs may benefit more.
 
+\subsubsection{Domain Context:}
 Of the $72$ ($288 / 4$) domain contextualization experimentation groups (each
 combination of LLM, ontology and prompting strategy, over four types of domain
 contextualization together comprise one group), ontology contextualization
