--- a/main.tex
+++ b/main.tex
@@ -1361,7 +1361,7 @@ and second-best strategies to be marginal ($< 0.017$) in several groups.
   \label{fig:temp-variation}
 \end{figure}
 
-\subsubsection{Response Variation}
+\subsubsection{Response Variation:}
 LLMs are inherently non-deterministic tools. The results they produce are not
 guaranteed to be 100\% replicable even from identical prompts. Hence, when
 investigating the applicability of LLMs for the task of determining semantic
