--- a/main.tex
+++ b/main.tex
@@ -1362,9 +1362,10 @@ and second-best strategies to be marginal ($< 0.017$) in several groups.
 \end{figure}
 
 \subsubsection{Response Variation:}
-Figure \ref{fig:temp-variation} presents $mAP@D$ variability exhibited by
-GPT-4o and Llama3-8B models run 10 times over Wines and CASE ontologies under
-three different temperature settings and with all other parameters fixed.
+Figure \ref{fig:temp-variation} presents $\text{mAP@D}$ variability exhibited
+by GPT-4o and Llama3-8B models run 10 times over Wines and CASE ontologies
+under three different temperature settings and with all other parameters
+fixed.
 
 GPT-4o's results are fairly consistent across all runs, which is observable as
 fairly small spreads in $mAP@D$ values for all three temperature settings and
