--- a/main.tex
+++ b/main.tex
@@ -1366,6 +1366,10 @@ Figure \ref{fig:temp-variation} presents $\text{mAP@D}$ variability exhibited
 by GPT-4o and Llama3-8B models run 10 times over Wines and CASE ontologies
 under different temperature settings and with all other parameters fixed.
 
+For both ontologies, we observe a reduction in average performance with
+increase in temperature with GPT-4o. A similar trend is not observed for
+experiments with Llama3-8B.
+
 GPT-4o's results are fairly consistent across all runs, which is observable as
 fairly small spreads in $mAP@D$ values for all three temperature settings and
 both ontologies. In contrast, there is more variability in the $mAP@D$ scores
