--- a/main.tex
+++ b/main.tex
@@ -1368,24 +1368,26 @@ under different temperature settings and with all other parameters fixed.
 
 For both ontologies, we observe a reduction in average performance with
 increase in temperature with GPT-4o. A similar trend is not observed for
-experiments with Llama3-8B. GPT-4o's results are fairly consistent across all runs, which is observable as
-fairly small spreads in $mAP@D$ values across all temperature values and
-both ontologies. In contrast, there is more variability in the $mAP@D$ scores
-for Llama3-8B. Surprisingly enough, neither higher temperature settings nor
-ontology differences bring about peaks in variance (although, more exploration
-of this issue is required).  Looking at the average scores and the influence
-of temperature on them, we observed no difference in performance at the low
-temperature setting. Results of the four Welch's T-tests carried out to
-compare the average $mAP@D$ scores produced by the same model over the same
-ontology at the low and default temperature conditions are
-non-significant. Raising the temperature seems to have a detrimental
-effect. For the Wines ontology, GPT-4o produces a significantly higher average
-$mAP@D$ score under default temperature conditions (M = 0.88, SD = 0.01) than
-under the high temperature setting (M = 0.85, SD = 0.01), t(18) = 6.6, p <
-.001. In a similar fashion, for the CASE ontology, the default temperature
-resulted in a significantly higher average $mAP@D$ score as well (M = 0.76, SD
-= 0.01) compared to the higher temperature (M = 0.71, SD = 0.01), t(18) = 9.8,p < .001. Although the same trend is observable for Llama3-8B, the much higher
-variance of the smaller LLM's results renders the test non-significant.
+experiments with Llama3-8B. GPT-4o's results are fairly consistent across all
+runs, which is observable as fairly small spreads in $mAP@D$ values across all
+temperature values and both ontologies. In contrast, there is more variability
+in the $mAP@D$ scores for Llama3-8B. Surprisingly enough, neither higher
+temperature settings nor ontology differences bring about peaks in variance
+(although, more exploration of this issue is required).  Looking at the
+average scores and the influence of temperature on them, we observed no
+difference in performance at the low temperature setting. Results of the four
+Welch's T-tests carried out to compare the average $mAP@D$ scores produced by
+the same model over the same ontology at the low and default temperature
+conditions are non-significant. Raising the temperature seems to have a
+detrimental effect. For the Wines ontology, GPT-4o produces a significantly
+higher average $mAP@D$ score under default temperature conditions (M = 0.88,
+SD = 0.01) than under the high temperature setting (M = 0.85, SD = 0.01),
+t(18) = 6.6, p < .001. In a similar fashion, for the CASE ontology, the
+default temperature resulted in a significantly higher average $mAP@D$ score
+as well (M = 0.76, SD = 0.01) compared to the higher temperature (M = 0.71, SD
+= 0.01), t(18) = 9.8,p < .001. Although the same trend is observable for
+Llama3-8B, the much higher variance of the smaller LLM's results renders the
+test non-significant.
 
 \section{Conclusion}
 \label{sec:conclusion}
