--- a/main.tex
+++ b/main.tex
@@ -1372,7 +1372,7 @@ ontologies. In contrast, there is more variability in the $mAP@D$ scores for
 Llama3-8B.
 
 GPT-4o is fairly consistent across all temperature settings on both
-ontologies. In contrast, Llama3-8B exhibits a great deal of response variation
+ontologies. In contrast, Llama3-8B exhibits a great deal of variation
 at each temperature value.
 
 Surprisingly enough, neither higher
