--- a/main.tex
+++ b/main.tex
@@ -1372,8 +1372,9 @@ ontologies. In contrast, there is more variability in the $mAP@D$ scores for
 Llama3-8B.
 
 GPT-4o is fairly consistent across all temperature settings on both
-ontologies. In contrast, Llama3-8B exhibits a great deal of variation
-at each temperature value.
+ontologies. In contrast, Llama3-8B exhibits a great deal of variation at each
+temperature value. $\text{mAP@D}$ performance variation marginally increases
+with termperature in GPT-4o but the same is not observed in Llama3-8B.
 
 Surprisingly enough, neither higher
 temperature settings nor ontology differences bring about peaks in variance
