--- a/main.tex
+++ b/main.tex
@@ -1374,11 +1374,13 @@ Llama3-8B.
 GPT-4o is fairly consistent across all temperature settings on both
 ontologies. In contrast, Llama3-8B exhibits a great deal of variation at each
 temperature value. $\text{mAP@D}$ performance variation marginally increases
-with termperature in GPT-4o but the same is not observed in Llama3-8B.
+with temperature in GPT-4o but performance on Llama3-8B is equally variable at
+all temperatures.
 
 Surprisingly enough, neither higher
 temperature settings nor ontology differences bring about peaks in variance
-(although, more exploration of this issue is required).  Looking at the
+(although, more exploration of this issue is required).
+Looking at the
 average scores and the influence of temperature on them, we observed no
 difference in performance at the low temperature setting. Results of the four
 Welch's T-tests carried out to compare the average $mAP@D$ scores produced by
