--- a/main.tex
+++ b/main.tex
@@ -1374,7 +1374,7 @@ Llama3-8B.
 GPT-4o is fairly consistent across all temperature settings on both ontologies
 with variability increasing with temperature although it is marginal. Despite
 the fact that setting a temperature value of $0.0$ should result in a
-deterministic output, both LLMs exhibit response variation at the temperature
+deterministic output, both LLMs exhibit response variation at that temperature
 although it is quite small for GPT-4o. In contrast, Llama3-8B exhibits a great
 deal of variation at each temperature value. $\text{mAP@D}$ performance
 variation marginally increases with temperature in GPT-4o but performance on
