--- a/main.tex
+++ b/main.tex
@@ -1376,9 +1376,7 @@ with variability increasing with temperature although it is marginal. Despite
 the fact that setting a temperature value of $0.0$ should result in a
 deterministic output, both LLMs exhibit response variation at that temperature
 although it is quite small for GPT-4o. In contrast, Llama3-8B exhibits a great
-deal of variation at each temperature value. $\text{mAP@D}$ performance
-variation marginally increases with temperature in GPT-4o but performance on
-Llama3-8B is equally variable at all temperatures. There is an observed
+deal of variation at each temperature value. There is an observed
 degradation in performance with increase in temperature in GPT-4o, with the
 highest performance observed at the lowest temperature
 
