--- a/main.tex
+++ b/main.tex
@@ -1366,11 +1366,6 @@ Figure \ref{fig:temp-variation} presents $\text{mAP@D}$ variability exhibited
 by GPT-4o and Llama3-8B models run 10 times over Wines and CASE ontologies
 under different temperature settings and with all other parameters fixed.
 
-GPT-4o's results are fairly consistent across all runs, which is observable as
-fairly small spreads in $mAP@D$ values across all temperature values and both
-ontologies. In contrast, there is more variability in the $mAP@D$ scores for
-Llama3-8B.
-
 GPT-4o is fairly consistent across all temperature settings on both ontologies
 with variability increasing with temperature although it is marginal. Despite
 the fact that setting a temperature value of $0.0$ should result in a
@@ -1378,7 +1373,9 @@ deterministic output, both LLMs exhibit response variation at that temperature
 although it is quite small for GPT-4o. In contrast, Llama3-8B exhibits a great
 deal of variation at each temperature value. There is an observed
 degradation in performance with increase in temperature in GPT-4o, with the
-highest performance observed at the lowest temperature
+highest performance observed at the lowest temperature. This degradation is
+slightly more pronounced in the CASE Ontology. Similar performance trends are
+not observed 
 
 Looking at the
 average scores and the influence of temperature on them, we observed no
