--- a/main.tex
+++ b/main.tex
@@ -1373,7 +1373,7 @@ deterministic output, both LLMs exhibit response variation at that temperature
 although it is quite small for GPT-4o. In contrast, Llama3-8B exhibits a great
 deal of variation at each temperature value. There is an observed
 degradation in performance with increase in temperature in GPT-4o, with the
-highest performance observed at the lowest temperature. This degradation is
+highest performance observed at the lowest temperature. This decline is
 slightly more pronounced in the CASE Ontology. Similar performance trends are
 not observed 
 
