--- a/main.tex
+++ b/main.tex
@@ -1375,7 +1375,9 @@ deal of variation at each temperature value. There is an observed
 degradation in performance with increase in temperature in GPT-4o, with the
 highest performance observed at the lowest temperature. This decline is
 slightly more pronounced in the CASE Ontology. Similar performance trends are
-not observed 
+not observed for Llama3-8B. Performing Welch's T-test for statistically
+significant performance variation across both LLMs and ontologies against the
+default value of $0.6$,
 
 Looking at the
 average scores and the influence of temperature on them, we observed no
